--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,7 +20,7 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
-
+    Symfony\Component\DependencyInjection\ContainerInterface: '@service_container'
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
